webserver/modules/webserver/securitygroups.tf
resource "aws_security_group" "allow_http" {
  name        = "allow-http-sg"
  description = "Allow HTTP inbound traffic"

  ingress {
    description      = "HTTP from everywhere"
    from_port        = 80
    to_port          = 80
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]
  }

  ingress {
    description      = "HTTP from everywhere"
    from_port        = 443
    to_port          = 443
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]
  }

  egress {
    from_port        = 0
    to_port          = 0
    protocol         = "-1"
    cidr_blocks      = ["0.0.0.0/0"]
  }

  tags = {
    Name = "sg-allow-http"
    service = var.service_name
    environment = var.service_environment
  }
}
